style: fix spacing of zero files illustration (#440)
[branch ch14224]

--- a/src/ui/files/components/ZeroFiles.scss
+++ b/src/ui/files/components/ZeroFiles.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: $margin-xl 0 48px;
+  padding: $padding-xl 0;
+  margin: auto;
   text-align: center;
 
   .headline {
@@ -11,6 +12,7 @@
   }
 
   .illustration {
+    max-width: 320px;
     margin: $margin-xl 0;
   }
 
